mini configure and test firebase

--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style/style.css" />
-    <script src="script/script.js"></script>
-    <title>Document</title>
+
+    <title>Irfan Earlux</title>
   </head>
   <body>
+    <!-- Webstart -->
     <div class="wrapper">
       <div class="container">
         <header>
           <div>
-            <h2 class="title">Yeag Geming</h2>
+            <h2 class="title">Irfan Earlux</h2>
             <p>---------- Lorem ipsum dolor sit amet.</p>
           </div>
           <nav>
@@ -68,7 +69,7 @@
                 facere obcaecati consequatur corporis nemo, quibusdam doloribus.
               </p>
               <div>
-                <form action="" method="">
+                <form class="contact-form" autocomplete="off">
                   <label for="name">
                     <div class="formstitle">
                       <p>Name</p>
@@ -105,6 +106,7 @@
                       rows="10"
                     ></textarea>
                   </label>
+
                   <button type="submit">Submit</button>
                 </form>
               </div>
@@ -140,7 +142,7 @@
                       type="email"
                       name=""
                       id=""
-                      placeholder="email address"
+                      placeholder="Email address"
                     />
                     <button type="submit">Subscribe</button>
                   </form>
@@ -165,5 +167,6 @@
         </footer>
       </div>
     </div>
+    <script type="module" src="script/script.js"></script>
   </body>
 </html>
